:sparkles: ajout login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <section><div class="container">
   <form [formGroup]="loginForm" (submit)="submitForm()">
+    <h1>Connexion</h1>
     <div class="field">
       <label class="label">Nom</label>
       <div class="control">
