--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,5 +1,6 @@
 <section><div class="container">
   <form [formGroup]="registerForm" (submit)="submitForm()">
+    <h1>Enregistrement</h1>
     <div class="field">
       <label class="label">Nom</label>
       <div class="control">
