--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+form {
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #444444;
+    border-radius: 8px;
+  }
+
+  h1{
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+    margin:10px;
+  }
