--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<section><div class="container">
+
   <form [formGroup]="registerForm" (submit)="submitForm()">
     <h1>Enregistrement</h1>
     <div class="field">
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="control">
-      <button type="submit" class="button is-link">Submit</button>
+      <button type="submit" class="button is-link">S'inscrire</button>
     </div>
     </form>
-  </div></section>
+
