--- a/src/app/components/liste/liste.component.html
+++ b/src/app/components/liste/liste.component.html
@@ -1,3 +1,21 @@
-<ul>
-    <li *ngFor="let item of items">{{ item.nom }}</li>
-</ul>
+
+    <div *ngIf="this.authService.isLoggedIn(); else notLoggedIn">
+        <h1>Bienvenue {{ user.username }}!</h1>
+
+    </div>
+    <ng-template #notLoggedIn>
+        <h1>Vous n'êtes pas connecté.</h1>
+    </ng-template>
+    <hr/>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nom</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr *ngFor="let item of items"><td>{{ item.nom }}</td></tr>
+        </tfoot>
+    </table>
+
+
