--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section><div class="container">
+
   <form [formGroup]="loginForm" (submit)="submitForm()">
     <h1>Connexion</h1>
     <div class="field">
@@ -6,15 +6,20 @@
       <div class="control">
         <input class="input" type="text" placeholder="John Doe" formControlName="username">
       </div>
+      <div *ngIf="loginForm.controls.username.touched && loginForm.controls.username.errors?.['required']" class="help is-danger">
+        Le nom est requis.
+      </div>
     </div>
     <div class="field">
       <label class="label">Mot de passe</label>
       <div class="control">
         <input class="input" type="password" placeholder="Votre mot de passe..." formControlName="password">
       </div>
+      <div *ngIf="loginForm.controls.password.touched && loginForm.controls.password.errors?.['required']" class="help is-danger">
+        Le mot de passe est requis.
+      </div>
     </div>
     <div class="control">
-      <button type="submit" class="button is-link">Submit</button>
+      <button type="submit" class="button is-link">Se connecter</button>
     </div>
     </form>
-  </div></section>
