--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
   
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
+        <p class="navbar-item">DASHBOARD TICKETS</p>
         <a class="navbar-item" [routerLink]="['/']" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact:true}">
           Accueil
         </a>
@@ -20,6 +21,10 @@
 
       </div>
       <div class="navbar-end">
+        <a *ngIf="!authService.isSupport()" class="navbar-item" [routerLink]="['/create-ticket']" routerLinkActive="is-active">Créer un ticket</a>
+
+        <a *ngIf="authService.isSupport()" class="navbar-item" [routerLink]="['/dashboard']" routerLinkActive="is-active">Dashboard</a>
+
         <a *ngIf="!authService.isLoggedIn()" class="navbar-item" [routerLink]="['/registration']" routerLinkActive="is-active">
           Inscription
         </a>
