--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,10 +21,12 @@
 
       </div>
       <div class="navbar-end">
-        <a *ngIf="authService.isLoggedIn()" class="navbar-item" [routerLink]="['/create-ticket']" routerLinkActive="is-active">Créer un ticket</a>
-
-        <a *ngIf="authService.isSupport()" class="navbar-item" [routerLink]="['/dashboard']" routerLinkActive="is-active">Dashboard</a>
-
+      <div class="navbar-item">
+          <div class="buttons">
+            <a *ngIf="authService.isLoggedIn()" class="button is-primary" [routerLink]="['/create-ticket']" routerLinkActive="is-active">Créer un ticket</a>
+            <a *ngIf="authService.isSupport()" class="button is-primary" [routerLink]="['/dashboard']" routerLinkActive="is-active">Dashboard</a>
+          </div>
+        </div>
         <a *ngIf="!authService.isLoggedIn()" class="navbar-item" [routerLink]="['/registration']" routerLinkActive="is-active">
           Inscription
         </a>
