--- a/src/app/components/shared/liste/liste.component.html
+++ b/src/app/components/shared/liste/liste.component.html
@@ -12,17 +12,18 @@
                         <th>Description</th>
                         <th>Date de création</th>
                         <th>Etat</th>
-                        <th *ngIf="this.authService.isSupport()"><p>Action</p></th>
+                        <th><p>Action</p></th>
                     </tr>
                 </thead>
                 <tfoot>
                     <tr *ngFor="let ticket of tickets">
-                        <td>{{ ticket.id }}</td>
+                        <td><strong>{{ ticket.id }}</strong></td>
                         <td>{{ ticket.nom }}</td>
                         <td>{{ ticket.description }}</td>
-                        <td>{{ ticket.date | date:'HH:mm le dd/MM/yyyy' }}</td>
+                        <td>{{ ticket.date | date:'le dd/MM/yyyy à HH:mm' }}</td>
                         <td>{{ ticket.etat | etat }}</td>
-                        <td *ngIf="this.authService.isSupport()"><a class="button is-primary">Répondre</a></td>
+                        <td *ngIf="!this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Voir les détails</a></td>
+                        <td *ngIf="this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Répondre</a></td>
                         <td *ngIf="this.authService.isSupport()"><a class="button is-danger">Fermer le ticket</a></td>
                     </tr>
                 </tfoot>
