:art: page détails ticket

--- a/src/app/components/shared/liste/liste.component.html
+++ b/src/app/components/shared/liste/liste.component.html
@@ -21,7 +21,7 @@
                         <td>{{ ticket.nom }}</td>
                         <td>{{ ticket.description }}</td>
                         <td>{{ ticket.date | date:'le dd/MM/yyyy à HH:mm' }}</td>
-                        <td>{{ ticket.etat | etat }}</td>
+                        <td [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</td>
                         <td *ngIf="!this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Voir les détails</a></td>
                         <td *ngIf="this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Répondre</a></td>
                         <td *ngIf="this.authService.isSupport()"><a class="button is-danger">Fermer le ticket</a></td>
