--- a/src/app/components/shared/detail-ticket/detail-ticket.component.html
+++ b/src/app/components/shared/detail-ticket/detail-ticket.component.html
@@ -1,1 +1,6 @@
-<h1>Détails</h1>
+<h1>Ticket #{{ ticket?.id }}</h1>
+<h2>{{ ticket?.nom }}</h2>
+<p>{{ ticket?.description }}</p>
+<p>{{ ticket?.date | date:'le dd/MM/yyyy à HH:mm' }}</p>
+<p [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</p>
+
