--- a/src/app/components/shared/liste/liste.component.html
+++ b/src/app/components/shared/liste/liste.component.html
@@ -24,13 +24,25 @@
                         <td [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</td>
                         <td *ngIf="!this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Voir les détails</a></td>
                         <td *ngIf="this.authService.isSupport()">
-                            <button class="button is-primary js-modal-trigger" data-target="modal-js-example">Répondre</button>
+                            <button class="button is-primary" (click)="modal.openModal(ticket)">Répondre</button>
                         </td>
                         <td *ngIf="this.authService.isSupport()"><a class="button is-danger">Fermer le ticket</a></td>
                     </tr>
                 </tfoot>
             </table>
         </div>
+
+        <app-modal #modal>
+            <h3 class="is-size-3">Voulez-vous répondre au ticket #{{ modal.ticket?.id }}?</h3>
+            <p>Vous serez en charge de ce ticket.</p>
+            <hr/>
+            <div class="buttons">
+                <a class="button is-primary" [routerLink]="['/ticket', modal.ticket?.id]" (click)="this.subscribeTicket(modal.ticket)">Confirmer</a>
+                <a class="button is-danger" (click)="modal.closeModal()">Annuler</a>
+            </div>
+        </app-modal>
+
+
         <ng-template #noTicketMessage>
             <h3>Vous n'avez pas de ticket en cours.</h3>
         </ng-template>
@@ -38,16 +50,3 @@
     <ng-template #notLoggedIn>
         <h1>Vous n'êtes pas connecté.</h1>
     </ng-template>
-
-    <div id="modal-js-example" class="modal">
-        <div class="modal-background"></div>
-      
-        <div class="modal-content">
-          <div class="box">
-            <p>Modal JS example</p>
-            <a [routerLink]="['ticket', 3]"></a>
-          </div>
-        </div>
-      
-        <button class="modal-close is-large" aria-label="close"></button>
-      </div>
