--- a/src/app/components/shared/detail-ticket/detail-ticket.component.html
+++ b/src/app/components/shared/detail-ticket/detail-ticket.component.html
@@ -3,12 +3,20 @@
 <p>{{ ticket?.date | date:'le dd/MM/yyyy à HH:mm' }}</p>
 <p [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</p>
 
+<app-form-message [idTicket]="ticket?.id"></app-form-message>
+
 <h3>Discussion</h3>
 <hr/>
 
 <app-message>
-    {{ ticket?.description }}
+    <p>{{ ticket?.description }}</p>
+    <p>{{ ticket?.date | date:'le dd/MM/yyyy à HH:mm' }}</p>
 </app-message>
+
+<app-discussion [idTicket]="ticket?.id ?? ''"></app-discussion>
+
+
+
 
 
 
