--- a/src/app/components/shared/liste/liste.component.html
+++ b/src/app/components/shared/liste/liste.component.html
@@ -24,9 +24,14 @@
                         <td [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</td>
                         <td *ngIf="!this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Voir les détails</a></td>
                         <!-- rendre ca plus joli -->
-                        <td *ngIf="this.authService.isSupport() && ticket?.etat <= 1">
+                        <td *ngIf="this.authService.isSupport() && ticket?.etat == 0; else reprendre">
                             <button class="button is-primary" (click)="modal.openModal(ticket, 'response')">Répondre</button>
                         </td>
+                        <ng-template #reprendre>
+                            <td *ngIf="this.authService.isSupport() && ticket?.etat == 1">
+                                <button class="button is-primary" [routerLink]="['ticket',ticket.id]">Reprendre</button>
+                            </td>
+                        </ng-template>
 
                         <td *ngIf="this.authService.isSupport() && ticket.etat < 2" (click)="modal.openModal(ticket, 'close')"><a class="button is-danger">Fermer le ticket</a></td>
                     </tr>
