--- a/src/app/components/shared/detail-ticket/detail-ticket.component.html
+++ b/src/app/components/shared/detail-ticket/detail-ticket.component.html
@@ -1,20 +1,23 @@
 <h1>Ticket #{{ ticket?.id }}</h1>
 <h2>Intitulé: {{ ticket?.nom }}</h2>
+<h3>Catégorie: {{ ticket?.categorie }}</h3>
 
 <p>{{ ticket?.date | date:'le dd/MM/yyyy à HH:mm' }}</p>
 <p [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</p>
 
-
+<div class="buttons mt-3 mb-3" (click)="modal.openModal(ticket!, 'close')"><a class="button is-danger">Fermer le ticket</a></div>
 
 <h3>Discussion</h3>
 <hr/>
 
 
 <app-message [contenu]="ticket?.description ?? ''" [date]="ticket?.date?.toString() ?? ''" [side]="true" ></app-message>
-<app-discussion [idTicket]="ticket?.id ?? ''"></app-discussion>
+<app-discussion [idTicket]="ticket?.id ?? ''" [idUser]="ticket?.iduser ?? ''" [idSupport]="ticket?.idsupport ?? ''"></app-discussion>
 
-<app-form-message [idTicket]="ticket?.id"></app-form-message>
+<app-form-message *ngIf="ticket?.etat == ticketEtat.EN_COURS" [idTicket]="ticket?.id"></app-form-message>
 
+<app-modal #modal>
+</app-modal>
 
 
 
