--- a/src/app/components/shared/detail-ticket/detail-ticket.component.html
+++ b/src/app/components/shared/detail-ticket/detail-ticket.component.html
@@ -7,11 +7,11 @@
 
 <div class="buttons mt-3 mb-3" (click)="modal.openModal(ticket!, 'close')"><a class="button is-danger">Fermer le ticket</a></div>
 
-<h3>Discussion</h3>
+<h3>Votre message</h3>
 <hr/>
-
-
 <app-message [contenu]="ticket?.description ?? ''" [date]="ticket?.date?.toString() ?? ''" [side]="true" ></app-message>
+<h3 class="mt-3 mb-3">Discussion</h3>
+<hr/>
 <app-discussion [idTicket]="ticket?.id ?? ''" [idUser]="ticket?.iduser ?? ''" [idSupport]="ticket?.idsupport ?? ''"></app-discussion>
 
 <app-form-message *ngIf="ticket?.etat == ticketEtat.EN_COURS" [idTicket]="ticket?.id"></app-form-message>
