--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,15 @@ form {
   }
 
 h2{font-size: 1.5em;}
+
+.toast-container .ngx-toastr {
+
+  box-shadow: none !important;
+  border: 1px solid #444444;
+  animation: all 0.5s ease;
+}
+
+.toast-container .ngx-toastr:hover {
+  box-shadow: none !important;
+  border: 1px solid #2b2b2b;
+}
