--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,8 @@ form {
   }
 
 h2{font-size: 1.5em;}
+
+.toast-container .ngx-toastr {
+  box-shadow: none !important;
+  border: 1px solid #444444;
+}
