--- a/src/app/components/support/chart/chart.component.html
+++ b/src/app/components/support/chart/chart.component.html
@@ -1,1 +1,3 @@
-<canvas #ticketChart></canvas>
+<div class="chart-container" style="height:50vh; width:80vw;display: flex;justify-content: center;">
+    <canvas id="chart" #ticketChart></canvas>
+</div>
