--- a/src/app/components/support/dashboard/dashboard.component.css
+++ b/src/app/components/support/dashboard/dashboard.component.css
@@ -2,3 +2,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: white;
     border-radius: 20px;
 }
+
+form{
+    position: fixed;
+    bottom: 0;
+    left: 100px;
+    width: 50% !important;
+    padding: 10px;
+}
