--- a/src/app/components/support/dashboard/dashboard.component.html
+++ b/src/app/components/support/dashboard/dashboard.component.html
@@ -1,13 +1,17 @@
 <div>
   <h1>Dashboard</h1>
   <h2>Nombre total de tickets: {{ this.nbTickets }}</h2>
+  <h3>Filtrer par: </h3>
   <div class="tabs is-centered">
     <ul>
-      <li [class.is-active]="activeTab === 'date'" (click)="setActiveTab('date');filterTickets();"><a>Filtrer par date</a></li>
-      <li [class.is-active]="activeTab === 'categorie'" (click)="setActiveTab('categorie')"><a>Filtrer par catégorie</a></li>
-      <li [class.is-active]="activeTab === 'etat'" (click)="setActiveTab('etat')"><a>Filtrer par état</a></li>
+      <li [class.is-active]="activeTab === 'date'" (click)="setActiveTab('date');filterTickets();"><a>Date</a></li>
+      <li [class.is-active]="activeTab === 'categorie'" (click)="setActiveTab('categorie')"><a>Catégorie</a></li>
+      <li [class.is-active]="activeTab === 'etat'" (click)="setActiveTab('etat')"><a>État</a></li>
     </ul>
   </div>
+
+
+  <app-chart [data]="filteredTickets" [chartType]="chartType" [filtre]="activeTab"></app-chart>
 
   <form [formGroup]="dateForm" *ngIf="activeTab === 'date'" (ngSubmit)="filterTickets()">
     <div class="field">
@@ -45,5 +49,5 @@
       </div>
     </div>
   </form>
-  <app-chart [data]="filteredTickets" [chartType]="chartType" [filtre]="activeTab"></app-chart>
+
 </div>
