:fire: refactor stats

--- a/src/app/components/support/chart/chart.component.html
+++ b/src/app/components/support/chart/chart.component.html
@@ -1,3 +1,3 @@
-<div class="chart-container" style="height:50vh; width:80vw;display: flex;justify-content: center;">
+<div class="chart-container" style="height:50vh; width:80vw;">
     <canvas id="chart" #ticketChart></canvas>
 </div>
