--- a/src/app/components/support/dashboard/dashboard.component.css
+++ b/src/app/components/support/dashboard/dashboard.component.css
@@ -6,7 +6,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 form{
     position: fixed;
     bottom: 0;
-    left: 100px;
+    right: 100px;
     width: 50% !important;
     padding: 10px;
 }
