--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,14 @@
       <div class="navbar-item">
           <div class="buttons">
             <a *ngIf="authService.isLoggedIn() && !authService.isSupport()" class="button is-primary" [routerLink]="['/create-ticket']" routerLinkActive="is-active">Créer un ticket</a>
-            <a class="button is-primary" [routerLink]="['/dashboard']" routerLinkActive="is-active">
+            <a *ngIf="authService.isLoggedIn() && authService.isSupport()" class="button is-primary" [routerLink]="['/dashboard']" routerLinkActive="is-active">
               Dashboard
             </a>
           </div>
         </div>
-        <a *ngIf="!authService.isLoggedIn()" class="navbar-item" [routerLink]="['/login']" routerLinkActive="is-active">Connexion</a>
+        <div class="navbar-item">
+          <a *ngIf="!authService.isLoggedIn()" class="button" [routerLink]="['/login']" routerLinkActive="is-active">Connexion</a>
+        </div>
         <div class="navbar-item">
           <a *ngIf="!authService.isLoggedIn()" class="button is-primary" [routerLink]="['/registration']" routerLinkActive="is-active">
             Inscription
